<project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <!-- This POM declares two Maven repository servers, with IDs MC.repo 
      (the release repository) and MC-SNAPSHOT.repo (the SNAPSHOT repository). 
      Therefore if you use this POM to deploy artifacts, your settings.xml configuration 
      file should contain credentials (in a servers/server element) for those servers. -->
   <!-- This POM provides plugin management for dockerfile-maven-plugin. 
      Using that plugin will require credentials (in a servers/server element) 
      for any Docker registries you use, with an id equal to the DNS name of the 
      registry server. If you use the (default) Docker Hub registry, you will need 
      credentials for the server index.docker.io. -->
   <groupId>uk.badamson.mc</groupId>
   <artifactId>MC-des</artifactId>
   <version>1.1.0-SNAPSHOT</version>
   <organization>
      <name>Benedict Adamson</name>
   </organization>
   <licenses>
      <license>
         <name>GNU General Public License, Version 3</name>
         <url>https://www.gnu.org/licenses/gpl.html</url>
         <distribution>repo</distribution>
      </license>
   </licenses>
   <scm>
      <connection>scm:git:git@github.com:BenedictAdamson/MC-des.git</connection>
      <developerConnection>scm:git:git@github.com:BenedictAdamson/MC-des.git</developerConnection>
      <url>https://github.com/BenedictAdamson/MC-des</url>
   </scm>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <spotbugs.version>4.2.0</spotbugs.version>
   </properties>
   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>org.junit</groupId>
            <artifactId>junit-bom</artifactId>
            <version>5.7.1</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
      </dependencies>
   </dependencyManagement>
   <build>
      <plugins>
         <plugin>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-maven-plugin</artifactId>
            <version>${spotbugs.version}</version>
            <dependencies>
               <!-- overwrite dependency on spotbugs if you want to specify 
                  the version of spotbugs -->
               <dependency>
                  <groupId>com.github.spotbugs</groupId>
                  <artifactId>spotbugs</artifactId>
                  <version>3.1.12</version>
               </dependency>
            </dependencies>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
               <release>11</release>
               <testIncludes>
                  <include>**/*.java</include>
               </testIncludes>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>3.0.0-M5</version>
            <!-- For running integration tests. -->
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.2.0</version>
            <configuration>
               <additionalJOptions>
                  <additionalJOption>-html5</additionalJOption>
               </additionalJOptions>
            </configuration>
            <executions>
               <execution>
                  <id>attach-javadocs</id>
                  <phase>package</phase>
                  <goals>
                     <goal>jar</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jxr-plugin</artifactId>
            <version>3.0.0</version>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-pmd-plugin</artifactId>
            <version>3.14.0</version>
            <configuration>
               <targetJdk>11</targetJdk>
               <failurePriority>2</failurePriority>
               <excludeRoots>
                  <excludeRoot>target/</excludeRoot>
               </excludeRoots>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <executions>
               <execution>
                  <id>attach-javadocs</id>
                  <phase>package</phase>
                  <goals>
                     <goal>jar</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M5</version>
            <configuration>
               <!-- Ensure uses static inner test classes. -->
               <excludes>
                  <exclude />
               </excludes>
               <argLine>--add-opens
                  uk.badamson.mc.simulation/uk.badamson.mc.simulation=ALL-UNNAMED</argLine>
            </configuration>
               <!-- For running unit tests. -->
         </plugin>
      </plugins>
   </build>
   <distributionManagement>
      <repository>
         <id>MC.repo</id>
         <name>MC Repository</name>
         <url>http://localhost:8081/repository/maven-releases/</url>
      </repository>
      <snapshotRepository>
         <id>MC-SNAPSHOT.repo</id>
         <name>MC Repository</name>
         <url>http://localhost:8081/repository/maven-snapshots/</url>
      </snapshotRepository>
   </distributionManagement>
   <dependencies>
      <dependency>
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-annotations</artifactId>
         <version>${spotbugs.version}</version>
      </dependency>
      <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest</artifactId>
         <version>2.2</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.opentest4j</groupId>
         <artifactId>opentest4j</artifactId>
         <version>1.2.0</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.icroco</groupId>
         <artifactId>jcip-annotations</artifactId>
         <version>1.1.0</version>
      </dependency>
   </dependencies>
</project>